allow to install this branch from package.json

--- a/package.json
+++ b/package.json
@@ -184,7 +184,8 @@
     "prefeature-test": "yarn run build-local",
     "prepublish": "yarn run build-local",
     "test": "yarn run lint && yarn run unit-test && yarn run feature-test",
-    "unit-test": "mocha src"
+    "unit-test": "mocha src",
+    "postinstall": "yarn run build-local"
   },
   "bin": {
     "cucumber.js": "./bin/cucumber.js",
