--- a/package.json
+++ b/package.json
@@ -151,7 +151,8 @@
     "string-argv": "0.0.2",
     "upper-case-first": "^1.1.2",
     "util-arity": "^1.0.2",
-    "verror": "^1.9.0"
+    "verror": "^1.9.0",
+    "yarn": "^0.24.5"
   },
   "devDependencies": {
     "ansi-html": "^0.0.7",
